--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "firebase": "^7.2.1",
     "jquery": "^3.4.1",
+    "pdfmake": "^0.1.62",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
